@@ -1,6 +1,8 @@
 
 SVN
 
+* A deployment is no longer required, it is optional from now on
+
 * Track deployed revisions
 
 * Rename 'www' role to 'web' to match Capistrano, #91 by sergio@entrecables.com
